--- a/HostelPostel.html
+++ b/HostelPostel.html
@@ -47,7 +47,7 @@ viewBox="0 0 172 172"
 style=" fill:#000000;"></svg>
 	<p class="text-font"> Burj Al Arab</p>
 	<br><br>
-	<a href="hotels.html" target="_blank" style="text-decoration:none;"><span style="border-style: solid;border-color: blue; background-color: blue;border-radius: 5%; padding: 2%;color: white;">Details</span></a>
+	<a href="src/Hotels/Hotels.html" target="_blank" style="text-decoration:none;"><span style="border-style: solid;border-color: blue; background-color: blue;border-radius: 5%; padding: 2%;color: white;">Details</span></a>
 </div></div>
 	
 	<div class="item"><img class="adjustImg" src="./Imgs/chedi muscat.jpg" alt="chedi muscat" />
@@ -59,7 +59,7 @@ style=" fill:#000000;"></svg>
 	<p class="text-font">
 	<div ><p class="text-font"> The Chedi Muscat – a GHM hotel</p>
 		<br><br>
-		<a href="hotels.html" target="_blank" style="text-decoration:none;"><span style="border-style: solid;border-color: blue; background-color: blue;border-radius: 5%; padding: 2%;color:white;">Details</span></a>
+		<a href="src/Hotels/Hotels.html" target="_blank" style="text-decoration:none;"><span style="border-style: solid;border-color: blue; background-color: blue;border-radius: 5%; padding: 2%;color:white;">Details</span></a>
 	</div></div></div>
 	
 	<div class="item"><img class="adjustImg" src="./Imgs/Mandarin dubai.jpg" alt="Mandarin dubai"/>
@@ -71,7 +71,7 @@ style=" fill:#000000;"></svg>
 	<p class="text-font">
 	<div ><p class="text-font"> Mandarin Oriental Jumeira, Dubai</p>
 		<br><br>
-		<a href="hotels.html" target="_blank" style="text-decoration:none;"><span style="border-style: solid;border-color: blue; background-color: blue;border-radius: 5%; padding: 2%;color: white;">Details</span></a>
+		<a href="src/Hotels/Hotels.html" target="_blank" style="text-decoration:none;"><span style="border-style: solid;border-color: blue; background-color: blue;border-radius: 5%; padding: 2%;color: white;">Details</span></a>
 	</div></div></div>
 	</div>
 	
@@ -85,7 +85,7 @@ style=" fill:#000000;"></svg>
 	<p class="text-font">
 	<div ><p class="text-font"> Mandarin Oriental,Doha</p>
 		<br><br>
-		<a href="hotels.html" target="_blank" style="text-decoration:none;"><span style="border-style: solid;border-color: blue; background-color: blue;border-radius: 5%; padding: 2%;color: white;">Details</span></a>
+		<a href="src/Hotels/Hotels.html" target="_blank" style="text-decoration:none;"><span style="border-style: solid;border-color: blue; background-color: blue;border-radius: 5%; padding: 2%;color: white;">Details</span></a>
 	</div></div></div>
 	<div class="item"><img class="adjustImg" src="./Imgs/W Doha hd.jpg" alt="Wdoha" />
 	<div class= "inline-view">
@@ -96,7 +96,7 @@ style=" fill:#000000;"></svg>
 	<p class="text-font">
 	<div ><p class="text-font"> W Doha</p>
 		<br><br>
-		<a href="hotels.html" target="_blank" style="text-decoration:none;"><span style="border-style: solid;border-color: blue; background-color: blue;border-radius: 5%; padding: 2%;color: white;">Details</span></a>
+		<a href="src/Hotels/Hotels.html" target="_blank" style="text-decoration:none;"><span style="border-style: solid;border-color: blue; background-color: blue;border-radius: 5%; padding: 2%;color: white;">Details</span></a>
 	</div></div></div>
 	<div class="item"><img class="adjustImg" src="./Imgs/kempinski.jpg" alt="kempinski" />
 	<div class= "inline-view">
@@ -107,7 +107,7 @@ style=" fill:#000000;"></svg>
 	<p class="text-font">
 	<div ><p class="text-font"> Kempinski Hotel Muscat</p>
 		<br><br>
-		<a href="hotels.html" target="_blank" style="text-decoration:none;"><span style="border-style: solid;border-color: blue; background-color: blue;border-radius: 5%; padding: 2%;color: white;">Details</span></a>
+		<a href="src/Hotels/Hotels.html" target="_blank" style="text-decoration:none;"><span style="border-style: solid;border-color: blue; background-color: blue;border-radius: 5%; padding: 2%;color: white;">Details</span></a>
 	</div></div></div>
 	</div>
 	
